# graph-plotter

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
graph/: graphwidget.cpp  graphwidget.h  graphwidget_events.cpp  graphwidget_paint.cpp
